--- a/naiyani-demo/src/app/product-database/product-database.component.html
+++ b/naiyani-demo/src/app/product-database/product-database.component.html
@@ -1,1 +1,5 @@
-<p>product-database works!</p>
+<div class="banner-container">
+  <button class="banner-button" routerLink="/leads-list">
+   PRODUCT<br>DATABASE
+  </button>
+</div>
