--- a/naiyani-demo/src/app/product-database/product-database.component.scss
+++ b/naiyani-demo/src/app/product-database/product-database.component.scss
@@ -7,13 +7,14 @@
    
   .banner-button {
     width: 15%;
-    height: 20%;
+    height: auto;
     padding: 15px 0;
     background: white;
     box-shadow: 4px 4px black;
     font-size: large;
     border: 1px solid;
     // border-radius: 10px;
+     white-space: normal; /* Allow text to wrap */
     margin: 12px;
     cursor: pointer;
     text-align: center;
@@ -28,7 +29,7 @@
   // Add media query for smaller screens
   @media (max-width: 768px) {
     .banner-button {
-      font-size: 14px;
+      font-size: 10px;
     }
   }
 }
