--- a/naiyani-demo/src/app/landing-page/landing-page.component.scss
+++ b/naiyani-demo/src/app/landing-page/landing-page.component.scss
@@ -4,7 +4,7 @@
     #{$property}: $value;
     height: 100vh;
   }
- 
+   /* Set the background color to white */
   .logo {
     width: auto;
     height: auto;
