--- a/naiyani-demo/src/app/product-database/product-database.component.scss
+++ b/naiyani-demo/src/app/product-database/product-database.component.scss
@@ -6,8 +6,8 @@
   };
    
   .banner-button {
-    width: 15%;
-    height: auto;
+    width: 20%;
+    height: 20%;
     padding: 15px 0;
     background: white;
     box-shadow: 4px 4px black;
