--- a/naiyani-demo/src/app/landing-page/landing-page.component.html
+++ b/naiyani-demo/src/app/landing-page/landing-page.component.html
@@ -1,8 +1,11 @@
 <!-- <p>landing-page works!</p> -->
 <div class="logo-container">
-  <a routerLink="/signin">
-    <div class="logo" [@fadeInOut]="logoState">
+  <!-- <a routerLink="/signin"> -->
+    <!-- <div class="logo" [@fadeInOut]="logoState">
+      <img [src]="logoUrl" alt="Logo" class="logo" />
+    </div> -->
+    <div class="logo">
       <img [src]="logoUrl" alt="Logo" class="logo" />
     </div>
-  </a>
+  <!-- </a> -->
 </div>
