animation added to button

--- a/naiyani-demo/src/app/auth/auth.component.html
+++ b/naiyani-demo/src/app/auth/auth.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="showAlert">
     <app-alert [message]="alertMessage" (close)="closeAlert()"></app-alert>
   </ng-container>
-  <img class="logo" src="assets/images/naiyani-logo.png" alt="Logo" />
+  <img class="logo" src="assets/images/crop.png" alt="Logo" />
   <ng-container *ngIf="!showSignUpForm; else signupFormTemplate">
     <!-- Login Form -->
     <div>
