--- a/naiyani-demo/src/app/landing-page/landing-page.component.scss
+++ b/naiyani-demo/src/app/landing-page/landing-page.component.scss
@@ -25,3 +25,44 @@
     }
   }
 }
+/* landing-page.component.scss */
+@import "src/app/shared/variables.scss";
+
+.logo-container {
+  @each $property, $value in $flex-center-styles {
+    #{$property}: $value;
+    height: 100vh;
+  }
+
+  .logo {
+    width: auto;
+    height: auto;
+    cursor: pointer;
+    transition: transform 4s ease; /* Adjust the duration for the animation speed */
+  }
+
+  .move-up {
+    transform: translateY(-40px); /* Move the logo up by 20px */
+  }
+
+  .logo-img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  @media (max-width: 768px) {
+    .logo {
+      width: 150px;
+      height: 75px;
+      margin: 0;
+      padding: 0;
+    }
+
+    @media (max-width: 1170px) {
+      .logo {
+        width: 200px;
+        height: auto;
+      }
+    }
+  }
+}
