landing-page-animation

--- a/naiyani-demo/src/app/button-signin/button-signin.component.html
+++ b/naiyani-demo/src/app/button-signin/button-signin.component.html
@@ -1,6 +1,6 @@
 <div class="button-container">
   <div class="logo-container">
-    <img class="logo" src="assets/images/new.png" alt="Logo" />
+    <img class="logo" src="assets/images/new.png" alt="Logo" [class.move-up]="moveLogo"/>
   </div>
   <div class="buttons-container">
     <div>
