--- a/naiyani-demo/src/app/landing-page/landing-page.component.html
+++ b/naiyani-demo/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,8 @@
+<!-- <div class="logo-container">
+  <div class="logo" [class.move-up]="moveLogo" [@fadeOut]="fadeLogo">
+    <img [src]="logoUrl" alt="Logo" class="logo-img" />
+  </div>
+</div> -->
 <div class="logo-container">
   <div class="logo" [class.move-up]="moveLogo" [@fadeOut]="fadeLogo">
     <img [src]="logoUrl" alt="Logo" class="logo-img" />
