--- a/naiyani-demo/src/styles.scss
+++ b/naiyani-demo/src/styles.scss
@@ -1,4 +1,13 @@
-@import '@fontsource/raleway';/* You can add global styles to this file, and also import other style files */
-body, html, .auth-container, .form-group, label, input, button,link .switch-link, .error-message {
-  font-family: 'Raleway', sans-serif;
+@import "@fontsource/raleway"; /* You can add global styles to this file, and also import other style files */
+body,
+html,
+.auth-container,
+.form-group,
+label,
+input,
+text,
+button,
+link .switch-link,
+.error-message {
+  font-family: "Raleway", sans-serif;
 }
