--- a/naiyani-demo/src/app/button-signin/button-signin.component.scss
+++ b/naiyani-demo/src/app/button-signin/button-signin.component.scss
@@ -101,6 +101,11 @@
   }
 }
 
+// @media (min-width: 768px) and (max-width: 1023px) { 
+//   .gradient-button {
+//     padding: 15px 130px;
+//   }
+// }
 @media (max-width: 480px) {
   .gradient-button {
     padding: 15px 130px;
