--- a/naiyani-demo/src/app/button-signin/button-signin.component.scss
+++ b/naiyani-demo/src/app/button-signin/button-signin.component.scss
@@ -23,10 +23,10 @@
   line-height: 32px;
   letter-spacing: 8px;
   font-weight: bolder;
+  text-shadow: 0px 4px 4px rgba(15, 12, 12, 0.5);
 }
 
 .shape {
-
   stroke-width: 6px;
   fill: transparent;
   stroke: black;
@@ -47,7 +47,7 @@
 }
 
 .gradient-button {
-  padding: 18px 155px;
+  padding: 18px 150px;
   border: none;
   border-radius: 12px;
   background-image: linear-gradient(to right, #000, #444, #777);
@@ -101,7 +101,7 @@
   }
 }
 
-// @media (min-width: 768px) and (max-width: 1023px) { 
+// @media (min-width: 768px) and (max-width: 1023px) {
 //   .gradient-button {
 //     padding: 15px 130px;
 //   }
