--- a/naiyani-demo/src/app/firstpage/firstpage.component.scss
+++ b/naiyani-demo/src/app/firstpage/firstpage.component.scss
@@ -44,6 +44,7 @@
   top: -48px;
 
   position: relative;
+  text-shadow: 0px 4px 4px rgba(15, 12, 12, 0.5);
   // animation: typing 3.5s steps(20, end), blink-caret 0.1s step-end infinite;
 }
 
