--- a/naiyani-demo/src/app/firstpage/firstpage.component.html
+++ b/naiyani-demo/src/app/firstpage/firstpage.component.html
@@ -3,6 +3,7 @@
     height="75"
     width="320"
     xmlns="http://www.w3.org/2000/svg"
+    (click)="navaigateToSignIn()"
     [@moveAndFade]="moveLogo ? 'moved' : 'initial'"
   >
     <rect class="shape" height="75" width="320" />
