--- a/naiyani-demo/src/app/firstpage/firstpage.component.scss
+++ b/naiyani-demo/src/app/firstpage/firstpage.component.scss
@@ -9,6 +9,9 @@
   width: 320px;
   // transform: scaleY(-1) scaleX(-1);
 }
+// svg:hover {
+//   cursor: pointer;
+// }
 .move-up {
   animation: moveUpAnimation 10s ease forwards; /* Slow upward animation */
   transform-origin: center bottom;
@@ -41,14 +44,14 @@
   border-right: 0.15em solid white; /* The typwriter cursor */
 
   white-space: nowrap; /* Keeps the content on a single line */
-  top: -48px;
+  top: -60px;
 
   position: relative;
   text-shadow: 0px 4px 4px rgba(15, 12, 12, 0.5);
-  // animation: typing 3.5s steps(20, end), blink-caret 0.1s step-end infinite;
+  // animation: typing 10s steps(20, end), blink-caret 5s step-end infinite;
 }
 
-// /* The typing effect */
+/* The typing effect */
 // @keyframes typing {
 //   from {
 //     width: 0;
@@ -59,15 +62,15 @@
 // }
 
 /* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  10% {
-    border-color: transparent;
-  }
-}
+// @keyframes blink-caret {
+//   from,
+//   to {
+//     border-color: transparent;
+//   }
+//   10% {
+//     border-color: transparent;
+//   }
+// }
 // @keyframes animatedStroke {
 //   0% {
 //     stroke-width: 6px;
@@ -112,6 +115,7 @@
   }
 }
 .shape {
+  cursor: pointer;
   transform: scaleY(-1) scaleX(-1);
   transform-origin: center center;
   fill: transparent;
