--- a/naiyani-demo/src/app/button-signin/button-signin.component.html
+++ b/naiyani-demo/src/app/button-signin/button-signin.component.html
@@ -1,4 +1,3 @@
-
 <div class="button-container">
   <div class="svg-wrapper">
     <svg
@@ -21,14 +20,10 @@
   </div>
   <div class="buttons-container">
     <div>
-      <button class="gradient-button black-to-ash username-button">
-        USERNAME
-      </button>
+      <button class="gradient-button username-button">USERNAME</button>
     </div>
     <div>
-      <button class="gradient-button black-to-ash password-button">
-        PASSWORD
-      </button>
+      <button class="gradient-button password-button">PASSWORD</button>
     </div>
   </div>
 </div>
