--- a/naiyani-demo/src/app/leads-list/leads-list.component.html
+++ b/naiyani-demo/src/app/leads-list/leads-list.component.html
@@ -1,1 +1,5 @@
-<p>leads-list works!</p>
+<div class="button-container">
+  <button class="gradient-button">LEADS LIST</button>
+  <button class="gradient-button">TOP 30000</button>
+  <button class="gradient-button">WHOLESALER TOOL</button>
+</div>
