--- a/naiyani-demo/src/app/leads-list/leads-list.component.html
+++ b/naiyani-demo/src/app/leads-list/leads-list.component.html
@@ -1,5 +1,7 @@
 <div class="button-container">
-  <button class="gradient-button">LEADS LIST</button>
-  <button class="gradient-button">TOP 30000</button>
-  <button class="gradient-button">WHOLESALER TOOL</button>
+  <button class="gradient-button leadsList-button fade">LEADS LIST</button>
+
+  <button class="gradient-button top-button">TOP 30000</button>
+
+  <button class="gradient-button wholesaler-button">WHOLESALER TOOL</button>
 </div>
