--- a/naiyani-demo/src/app/leads-list/leads-list.component.scss
+++ b/naiyani-demo/src/app/leads-list/leads-list.component.scss
@@ -1,11 +1,12 @@
 @import "src/app/shared/variables.scss";
+
 .button-container {
   @each $property, $value in $flex-center-styles {
     #{$property}: $value;
     height: 100vh;
-    text-align: center;
-    position: relative;
+    overflow: hidden; /* Add this to hide scrollbars */
   }
+}
 
 .gradient-button {
   height: 120px;
@@ -14,12 +15,52 @@
   border-radius: 50%;
   background-image: linear-gradient(to right, #000, #444, #777);
   color: white;
+  margin-top: 37px;
+  margin-bottom: 37px;
   font-size: 11px;
   cursor: pointer;
-    margin-top: 35px;
-    margin-bottom: 30px;
-  
+  opacity: 0; /* Initially hide the buttons */
 }
 
-  //   opacity: 0; /* Initially hide the buttons */
+@keyframes appearButtonAnimation {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
+
+.leadsList-button {
+  animation: appearButtonAnimation 1.5s ease forwards;
+  animation-delay: 1s;
+}
+
+.top-button {
+  animation: appearButtonAnimation 1.5s ease forwards;
+  animation-delay: 2s;
+}
+
+.wholesaler-button {
+  animation: appearButtonAnimation 1.5s ease forwards;
+  animation-delay: 3s;
+  animation-fill-mode: forwards; /* Ensure the button stays visible after animation ends */
+  animation-iteration-count: 1; /* Run animation once */
+  animation-play-state: running;
+}
+
+// .fade {
+//   animation: fadeButtonAnimation 1.5s ease forwards;
+//   animation-delay: 6s;
+//   animation-fill-mode: forwards;
+// }
+// @keyframes fadeButtonAnimation {
+//   0% {
+//     opacity: 1;
+//   }
+//   100% {
+//     opacity: 0;
+//   }
+// }
